[package]
name = "pts_gem-chat"
version = "0.2.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.14", features = ["json", "socks"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenvy = "0.15.7"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 16
