[package]
name = "pts_gem-chat"
version = "0.2.2"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "socks", "rustls-tls"], default-features = false }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"], default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = { version = "1.0.140", features = ["alloc"], default-features = false }
dotenvy = "0.15.7"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 16
